Fixing top nav bar icons and spacing

--- a/payback/src/index.css
+++ b/payback/src/index.css
@@ -194,13 +194,16 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6, p, .p, a, link, button, in
 /* ////////// ////*/
 /* ////////// ////*/
 
+.navSpacer {
+  width: 25px;
+}
 
 .navStack {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 13px;
+  margin-top: 7px;
   margin-bottom: 5px;
 }
 
@@ -217,6 +220,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6, p, .p, a, link, button, in
   padding-right: 30px;
   bottom: 0;
   width: 100%;
+  height: 65px;
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   box-shadow: 0 -2px 5px 0 rgba(53, 0, 138, 0.1);
@@ -266,8 +270,8 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6, p, .p, a, link, button, in
 }
 
 .topNavOptionsWhite {
-  width: 24px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
 }
 
 .groupsContainer {
@@ -375,6 +379,13 @@ img.editIcon {
 /* 
 */
 
+h1#friendsTitle {
+  /* margin-right: 161px; */
+  text-align: center;
+  /* width: 50%; */
+}
+
+
 #searchForm {
   width: 234px;
   height: 41px;
@@ -389,6 +400,20 @@ img.editIcon {
   box-shadow: 0 5px 20px 0 rgba(1, 0, 51, 0.05);
   background-color: #fff;
 }
+
+#searchForm::placeholder {
+  color: var(--text-dark-purple);
+  font-size: var(--small-copy);
+  padding-left: 42px;
+}
+
+#searchFormTwo::placeholder {
+  color: var(--text-dark-purple);
+  font-size: var(--small-copy);
+  padding-left: 42px;
+}
+
+
 
 #searchFormTwo {
   width: 327px;
@@ -1114,10 +1139,13 @@ img.noteIcon {
 /* /////// */ 
 /* /////// */ 
 
+
+
 #monthly {
   color: var(--main-bg-color);
-  margin-left: 150px;
 }
+
+
 p#netTotal {
   font-size: var(--medium-copy);
   color: var(--main-bg-color);
@@ -1168,7 +1196,6 @@ h6#monthlyDate {
   border-radius: 9.6px;
   box-shadow: 0 5.8px 23.1px 0 rgba(0, 0, 0, 0.05);
   background-color: #fff;
-  margin: 0;
 }
 
 img.monthlyArrow {
